--- a/03_toolchain.tex
+++ b/03_toolchain.tex
@@ -1,16 +1,16 @@
 \chapter{Toolchain} \label{chap:toolchain}
 
-The overall idea on how to achieve a toolchain that fully supports the requirements described in section \ref{sec:vision_for_a_dsl} and to supports the modeler in the modeling process is, to develop an integrated development environment like they are used in computer sciences and software development. IDE’s, such as the well known Eclipse IDE, Netbeans or MS Visual Studio  are very common and crucial tools in the area of software development. They provide the software developer with a set of very useful tools and functionality such as code completion, syntax highlighting, debugging features and so on. All of these tools allow the software developer to manage much more complex software projects and increases its productivity. Based on the premiss that software developers are nothing else than “modeler of source code”, the similarity to the problems in the environmental modeling domain are obvious. This chapter tries to outline the idea of such a specialized IDE for environmental modeling. In order to do this, we decided to describe a workflow including the steps a modeller has to take, to define a model with such an IDE.
+The overall idea on how to achieve a toolchain that fully supports the requirements described in section \ref{sec:vision_for_a_dsl} and to supports the modeler in the modeling process is, to develop an integrated development environment like they are used in computer sciences and software development. IDEs, such as the well known Eclipse IDE, Netbeans or MS Visual Studio  are very common and crucial tools in the area of software development. They provide the software developer with a set of very useful tools and functionality such as code completion, syntax highlighting, debugging features and so on. All of these tools allow the software developer to manage much more complex software projects and increases its productivity. Based on the premiss that software developers are nothing else than “modeler of source code”, the similarity to the problems in the environmental modeling domain are obvious. This chapter tries to outline the idea of such a specialized IDE for environmental modeling. In order to do this, we decided to describe a workflow including the steps a modeller has to take, to define a model with such an IDE.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.7\textwidth]{pics/toolchain/modeling_workflow.png}
 	\caption{modeling workflow \label{fig:modeling_workflow}	}
 \end{figure}
 
-A very extensive discussion of a modeling process can be found in \autocite{Jakeman2006602}. Hence this article targets the quality of the model process itself and does not take into account how this workflow can be supported by tools, we decided to take a much more simpler modelling workflow that is more suitable and based on the steps necessary using an IDE for the modelling process.Picture \ref{fig:modeling_workflow} depicts this simplified modeling workflow.
+A very extensive discussion of a modeling process can be found in \autocite{Jakeman2006602}. Hence this article targets the quality of the model process itself and does not take into account how this workflow can be supported by tools, we decided to take a much more simpler modelling workflow that is more suitable and based on the steps necessary using an IDE for the modelling process. Picture \ref{fig:modeling_workflow} depicts this simplified modeling workflow.
 
 
-We decided to start with the implementation of the model. Prior steps such as defining the model purpose, specifying model context and so on, like they are recommended in \autocite{Jakeman2006602} are left out intentionally in fact we want to emphasize the use of the IDE and to concentrate on the requirements derived from chapter \ref{sec:vision_for_a_dsl}. In the following sections we want to explain the different steps and what features the IDE can offer to support the user in more detail. 
+We decided to start with the implementation of the model. Prior steps such as defining the model purpose, specifying model context and so on, like they are recommended in \autocite{Jakeman2006602} are left out intentionally in fact we want to emphasize the use of the IDE and to concentrate on the requirements derived from chapter~\ref{sec:vision_for_a_dsl}. In the following sections we want to explain the different steps and what features the IDE can offer to support the user in more detail. 
 
 \begin{figure}[h]
 	\centering
@@ -23,10 +23,10 @@ We decided to start with the implementation of the model. Prior steps such as de
 The modeler starts with the implementation/coding of the model. Since this is the most basic part of the IDE and the main interface for the user, this is the place to include the most relevant and crucial tools to support the user during the coding phase. These features are very diverse and range from very simple and basic ones like code completion, syntax highlighting, automatic warnings and action items to much more complex and specialized ones that belongs to the requirements from chapter \ref{sec:vision_for_a_dsl}. One of these very specific features are domain specific semantic datatypes and the handling of typical operations as explained earlier. In order to achieve these features, it is necessary to define important semantical aspects of entities and datatypes used in the model.
 
 
-A very common approach to define the semantics in a formal and machine readable way, which is important for later code generation, are ontologies\footnote{see \nameref{sec:app:ontology} in the appendix for a short explanation of ontologies}. The reasons for this are discussed in \autocite{toolchain:protege_onto}, \autocite{toolchain:gruber} and \autocite{toolchain:musen}. And also in the environmental domain ontologies are often used and are a very common way to define semantics of entities. \autocite{dsl:muetzelfeldt}, \autocite{Villa2009577}
+A very common approach to define the semantics in a formal and machine readable way, which is important for later code generation, are ontologies\footnote{see \nameref{sec:app:ontology} in the appendix for a short explanation of ontologies}. The reasons for this are discussed in \autocite{toolchain:protege_onto}, \autocite{toolchain:gruber} and \autocite{toolchain:musen}. And also in the environmental domain ontologies are often used and are a very common way to define semantics of entities \autocite{dsl:muetzelfeldt}, \autocite{Villa2009577}.
 
 
-Therefore the semantics of every used entity or datatype must be defined in an ontology which then can be used to automatically check consistency of the model, and that allows the IDE to handle typical operations like automatic unit conversions. Actually there are a set of projects that has focused on this topic  and that developed a set of ontologies that define the semantic of entities in the environmental domain.  QUDT, which stands for Quantities, Units, Dimensions and Data Types in OWL and XML \autocite{toolchain:qudt} is one of these projects and one of it’s goals is to ``to provide a unified model of, measurable quantities, units for measuring different kinds of quantities, the numerical values of quantities in different units of measure and the data structures and data types used to store and manipulate these objects in software'' \autocite{toolchain:qudt}. Another, more famous project is Nasa SWEET (Semantic Web for Earth and Environment Technologies) \autocite{toolchain:nasa_sweet} which provides a very extensive set of ontologies and ``include several thousand terms, spanning a broad extent of earth system science and related concepts''\autocite{nasa_sweet_guide}.
+Therefore the semantics of every used entity or datatype must be defined in an ontology which then can be used to automatically check consistency of the model, and that allows the IDE to handle typical operations like automatic unit conversions. Actually there are a set of projects that has focused on this topic  and that developed a set of ontologies that define the semantic of entities in the environmental domain.  QUDT, which stands for Quantities, Units, Dimensions and Data Types in OWL and XML \autocite{toolchain:qudt} is one of these projects and one of it’s goals is to ``to provide a unified model of, measurable quantities, units for measuring different kinds of quantities, the numerical values of quantities in different units of measure and the data structures and data types used to store and manipulate these objects in software'' \autocite{toolchain:qudt}. Another, more famous project is NASA SWEET (Semantic Web for Earth and Environment Technologies) \autocite{toolchain:nasa_sweet} which provides a very extensive set of ontologies and ``include several thousand terms, spanning a broad extent of earth system science and related concepts''\autocite{nasa_sweet_guide}.
 
 
 Although these projects describe a huge set of environmental concepts it is conceivable that a modeler needs additional semantical aspects of an already existing concept or to create a totally new entity that isn’t already semantically described in the used ontology set. Therefore the user must have the possibility to edit the underlying ontologies.  There are already good tools that allow the creation of ontologies. Protege \autocite{dsl:protege} is a very common tool for this. Although it would be sufficient to provide the user access to the underlying ontologies and thereby giving  the possibility to edit them with standard tools we think that providing the user with a specialized tool to do this is a much more better idea.
@@ -44,7 +44,7 @@ Another important task the user wants to do with his new developed model, is to 
 
 The first question is what kind of metadata must a model provide to allow such a further machine based processing, how can it be integrated in the IDE and how can the user control necessary details of the process of meta descriptions.
 Although this is a really important step conceptually, we think that the occurring problems are not difficult to solve from a technical point of view. Hence the underlying problem of describing entities with metadata had occurred also in other domains than in environmental modelling and are solved there already, thus we think that it must be possible to adapt these solutions.
-One example, which is very similar to the one described above, is the service oriented architecture (SOA) principle. In this paradigm, software components are provided as (web) service. The service functionality, its input parameters and the output parameters are described in standardized and formal way. In terms of SOA this is mostly done with the Web Service Description Language. If we suppose, that the written environmental models are nothing else than a kind of service or software component, it is obvious that it must be possible to provide meta information of an environmental model. This answers also the question what metadata must be provided by the model. The model itself can be thought of as a black box, which needs some input parameters, makes some calculations based on this input, and returns the processed results. The following list depicts some meta information that are needed following the WSDL approach. \autocite{dsl:muetzelfeldt}
+One example, which is very similar to the one described above, is the service oriented architecture (SOA) principle. In this paradigm, software components are provided as (web) service. The service functionality, its input parameters and the output parameters are described in standardized and formal way. In terms of SOA this is mostly done with the Web Service Description Language. If we suppose, that the written environmental models are nothing else than a kind of service or software component, it is obvious that it must be possible to provide meta information of an environmental model. This answers also the question what metadata must be provided by the model. The model itself can be thought of as a black box, which needs some input parameters, makes some calculations based on this input, and returns the processed results. The following list depicts some meta information that are needed following the WSDL approach \autocite{dsl:muetzelfeldt}.
 
 \begin{enumerate}
 \item input parameters
@@ -65,7 +65,7 @@ Another example of the environmental domain, which also topics the description o
 Besides the feasibility of this issue, another question is how the user can generate the necessary metadata for his model. A good example for doing this in the software domain, is JavaDoc. JavaDoc is a tool that allows the Java programmer to automatically generate documentation of his program based on annotations he integrates directly to the source code. The documentation itself is then presented in HTML. This approach has some good key concepts. The first one is that the user can easily provide the necessary meta information through annotations directly where they are needed. Furthermore it separates the final representation from the information itself. To give an example from the environmental domain, OMS also uses annotations to provide metadata of the models. According to David et al. they defined a “annotation standard” for the following features: “(i) simplifying component integration, (ii) implicit autoscaling of simulation models in multicore and multiprocessor environments, (iii) providing for modeling simulation traceability and integrity, and (iv) autodocumentation of models and simulations'' \autocite[2]{dsl:oms-handbook}.
 
 
-We think that it is a good idea to transfer the ideas of JavaDoc/OMS to the toolchain of our environmental modelling IDE. This means that the DSL must provide the possibility to annotate the single entities. Furthermore a tool that generates a model description (may be based on OpenMi) based on these annotations must be developed.
+We think that it is a good idea to transfer the ideas of JavaDoc/OMS to the toolchain of our environmental modelling IDE. This means that the DSL must provide the possibility to annotate the single entities. Furthermore a tool that generates a model description (may be based on OpenMI) based on these annotations must be developed.
 
 
 An alternative approach could be to provide the user a GUI-based tool to gather and edit the meta information. Again, this solution would need a kind of generator that generates a model description based on the metadata.
@@ -77,7 +77,7 @@ To complete this discussion, we want to call attention to another very important
 To put it in a nutshell, we think that this step is more a question of how to integrate the feature in a user friendly way and we do not see problems in the technical feasibility.
 
 \section{Run and verifiy}
-Once the model is written within the IDE it must be possible to run the model as simple as possible and get all necessaries simulation results the user requires. To run the model it is necessary to attach some datasources, because the data is not part of the model \autocite{dsl:muetzelfeldt}. This task does not rely to the concrete modelprocess. It must be possible to attach and detach datasources in a simple way.(see also \ref{sec:vision_for_a_dsl})
+Once the model is written within the IDE it must be possible to run the model as simple as possible and get all necessaries simulation results the user requires. To run the model it is necessary to attach some datasources, because the data is not part of the model \autocite{dsl:muetzelfeldt}. This task does not rely to the concrete modelprocess. It must be possible to attach and detach datasources in a simple way.
 
 
 The model itselfs would define dataslots on which data sources can be attached. In chapter Second DSL Draft the describe statement is used to describe a mapping beetwen one datatupel to another, like an mathematical funktion. Further these statemant can be used as dataslot. In this way the belonging value is not mappend with an formula. In chapter \ref{sec:second_dsl_draft} the describe statement is used to define a mapping between a input datatupel and output datatupel. These mapping is done with a mathematical formula. Further the describe statement can be used as a dataslot. Used in this way the describe statements provide the modeller the possibility to connect to another model or database which will handle the mapping between input and output data. Further the model metadata describes the structure of the input data which is expected. Based on this information it is possible that the IDE generates an adapter from the available data sources to the model \autocite[81]{Villa2009577}. This process would be entirely transparent for the user. The user will just use a wizard dialog to plug all available data sources to the model using the drag and drop metaphor. All data sources which can not converted to a format the model expects, would automatically marked as inappropriate. If one source, which the user wants to use is marked as inappropriate, he has to reconsider the model definition.
@@ -100,10 +100,10 @@ Many models require a huge amount of computation power but some of these models 
 One of the main goals of the DSL and the toolchain is the ability to facilitate the reuse of all models. The greatest degree of reuse can be reached by sharing the models with an community of other modellers.
 
 
-This possibility is reminiscent of the vision of webservices. On basis of the metadata it is possible to decide if the model fits into the needs of the modeller. The main benefit appears in the context of composing some models to an overall model. Here too, we can see the analogy to webservices (service composition).
+This possibility is reminiscent of the vision of web services. On basis of the metadata it is possible to decide if the model fits into the needs of the modeller. The main benefit appears in the context of composing some models to an overall model. Here too, we can see the analogy to web services (service composition).
 
 
-One way to exploit to whole power of the metadescription could be to describe the interfaces of the required submodels and the IDE searches for suited models. In this point it is needed to extends the concepts which are used in webservices. To describe a webservice interface WSDL is used, but to achieve the vision of an automated submodel search, a ontology based description is required.
+One way to exploit to whole power of the metadescription could be to describe the interfaces of the required submodels and the IDE searches for suited models. In this point it is needed to extends the concepts which are used in web services. To describe a web service interface WSDL is used, but to achieve the vision of an automated submodel search, a ontology based description is required.
 
 
 The biggest problem to achieve the vision of automated model search is to distribute the standard rather than the technical implementation.
